Fixed distorted slider images on mobile devices

--- a/view/frontend/web/css/slick-magento.less
+++ b/view/frontend/web/css/slick-magento.less
@@ -18,6 +18,10 @@
             // in case of multiple rows
             box-sizing: border-box;
         }
+
+        img {
+            height: auto;
+        }
     }
 }
 
